--- a/GeekNewsDemo/app/src/main/res/values/strings.xml
+++ b/GeekNewsDemo/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+
+    <string name="app_intro">A pure reading App for you</string>
     <string name="app_name">GeekNewsDemo</string>
     <string name="zhihu">知乎日报</string>
     <string name="wechat">微信精选</string>
