--- a/GeekNewsDemo/app/src/main/res/values/strings.xml
+++ b/GeekNewsDemo/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="drawer_close">关闭</string>
     <string name="drawer_group_content">资讯</string>
     <string name="drawer_group_options">选项</string>
+    <string name="error_tips">糟糕！加载失败了ヽ(≧Д≦)ノ\n 偷偷告诉你一些可能的原因：\n1.惨不忍睹的网络环境\n 2.服务器君的不定期抽风\n 3.GeekNews现在心情不好拒绝服务喔~</string>
+
 </resources>
